--- a/package.json
+++ b/package.json
@@ -11,10 +11,8 @@
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.15.5",
-<<<<<<< HEAD
-=======
+    "express-session": "^1.15.6",
     "mongodb": "^3.0.2",
->>>>>>> 5436c670de021a527bc51bc9de1aa43d9a76d29b
     "mongoose": "^5.0.6",
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
